# rfetch

./: .gitmodules  Cargo.toml  README.md
src/: colors.rs  main.rs
src/system_info/: cpu.rs  gpu.rs  host.rs  memory.rs  mod.rs  package.rs  time.rs
